--- a/week1/Makefile
+++ b/week1/Makefile
@@ -10,7 +10,7 @@
 # -march=native Tells the compiler that the binary only has to run on
 #               the exact machine it was compiled on and not general 
 #               machines with similar architecture. (more faster code)
-CPPFLAGS = -std=c++2a -Wall -Wextra -Wshadow -pedantic -march=native
+CPPFLAGS = -std=c++17 -Wall -Wextra -Wshadow -pedantic -march=native
 
 # Environment variable containing the names of headers that will be used
 # with most executables. Without this, make will not know to recompile
